# AITradeIntelligence

./: .env  app.py  app.py.bak  controller.py  order_management_system.py  patch.txt  pyproject.toml  requirements.txt  risk_config.json  streamlit_dashboard.py
.gitignore/.streamlit/: secrets.toml
config/: auto_trading_settings.json  credentials.json  risk_config.json  scheduler.json
models/: ai_prediction_engine.py  angel_one_integration.py  load_model_util.py  risk_management_module.py  save_model_util.py  strategy_model.py  trading_strategy_module.py
modules/: data_collection.py  order_management_system.py
pages/: auto_trading.py  dashboard.py  performance_monitoring.py  scheduler.py  settings.py  strategy_builder.py  trade_execution.py
utils/: ai_strategy_generator.py  angel_api.py  auto_trader.py  connection_monitor.py  data_manager.py  deep_learning_models.py  notification_manager.py  oi_analysis.py  position_manager.py  risk_management.py  scheduler.py  sentiment_analysis.py  strategy_generator.py  technical_analysis.py  trade_executor.py  trading_journal.py
