[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "keras>=2.14.0",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyotp>=2.9.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "twilio>=9.5.2",
]
